unpackaged/objects/copado__Application_Feature__c.object
<CustomObject>
	<description>Copado&apos;s Feature object enables you to manage Features related to User Stories &amp; Applications. Features are made up of multiple User Stories.</description>
	<fields>
		<fullName>copado__Application__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Application</label>
		<referenceTo>copado__Application__c</referenceTo>
		<relationshipLabel>Features</relationshipLabel>
		<relationshipName>ApplicationFeatures</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Architect__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Architect</label>
		<referenceTo>User</referenceTo>
		<relationshipName>FeatureArchitects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Complexity__c</fullName>
		<label>Complexity</label>
		<precision>10</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Description__c</fullName>
		<label>Description</label>
		<length>131072</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Epic__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Epic</label>
		<referenceTo>copado__Epic__c</referenceTo>
		<relationshipLabel>Features</relationshipLabel>
		<relationshipName>ApplicaitonFeatures</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Estimated_Value__c</fullName>
		<label>Estimated Value</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>copado__Priority__c</fullName>
		<label>Priority</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>1</fullName>
				</value>
				<value>
					<fullName>2</fullName>
				</value>
				<value>
					<fullName>3</fullName>
				</value>
				<value>
					<fullName>4</fullName>
				</value>
				<value>
					<fullName>5</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Product_Owner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Product Owner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>FeatureOwners</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Requested</fullName>
				</value>
				<value>
					<fullName>Under Review</fullName>
				</value>
				<value>
					<fullName>Ready for Refinement</fullName>
				</value>
				<value>
					<fullName>Refinement in Progress</fullName>
				</value>
				<value>
					<fullName>Accepted</fullName>
				</value>
				<value>
					<fullName>Coming Soon</fullName>
				</value>
				<value>
					<fullName>Delivered</fullName>
				</value>
				<value>
					<fullName>Rejected</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Technical_Assumptions__c</fullName>
		<inlineHelpText>Technical Assumptions or Design Considerations for Feature</inlineHelpText>
		<label>Technical Assumptions</label>
		<length>32768</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Users__c</fullName>
		<label># Users</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Value_Type__c</fullName>
		<inlineHelpText>Business Value of Feature</inlineHelpText>
		<label>Value Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Time Savings</fullName>
				</value>
				<value>
					<fullName>New Revenue</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoconnect__Last_Synced_Date__c</fullName>
		<label>Last Synced Date</label>
		<type>DateTime</type>
	</fields>
	<label>Feature</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__Priority__c</columns>
		<columns>copado__Epic__c</columns>
		<columns>copado__Application__c</columns>
		<columns>copado__Product_Owner__c</columns>
		<columns>copado__Architect__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Feature Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Features</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>